--- a/BisLeagues.Presentation/BisLeagues.Presentation.csproj
+++ b/BisLeagues.Presentation/BisLeagues.Presentation.csproj
@@ -365,7 +365,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\news_picture\" />
+    <Folder Include="wwwroot\news_pictures\" />
     <Folder Include="wwwroot\video_pictures\" />
   </ItemGroup>
 
