--- a/BisLeagues.Presentation/BisLeagues.Presentation.csproj
+++ b/BisLeagues.Presentation/BisLeagues.Presentation.csproj
@@ -339,6 +339,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Views\Home\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Utility\SeasonSelector.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
