--- a/BisLeagues.Core/appsettings.json
+++ b/BisLeagues.Core/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=BisLeagues;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DbConnection": "Data Source=host5.birhost.net;User Id=BisUser;Password=#Arena!1987;Initial Catalog=BisLeagues;Integrated Security=False;Connect Timeout=30;TrustServerCertificate=True;"
   },
   "Logging": {
     "IncludeScopes": false,
