--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 */wwwroot/news_pictures/
 */wwwroot/team_logos/
 */wwwroot/video_pictures/
+*/wwwroot/user_pictures/
 */wwwroot/galleries/
 appsettings.json
 appsettings.Development.json
